Add nomes e descrição do que foi feito

--- a/k_means.ipynb
+++ b/k_means.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Igor de Jesus Santos - 119017594\n",
+    "### Matheus Isidoro - 119059596\n",
+    "### Saulo Roberto - 120128489"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Nosso grupo fez um algoritmo que recebe por meio de uma interface gráfica o caminho de uma rquivo .csv, a quantidade de clusters e os nomes das colunas da tabela que será usada para plotar o gráfico com a clusterização (lembrando que há a possibilidade de usar 1, 2 ou 3 dimensões, sendo definido pelo número de colunas passadas). Ao passar uma string vazia para a próxima coluna o gráfico é plotado."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -395,7 +411,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -409,7 +425,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
